--- a/notebooks/hands_on.ipynb
+++ b/notebooks/hands_on.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -22,14 +22,67 @@
     "id": "vAD3TVto9mR2",
     "outputId": "4bb5db62-d008-4bab-c322-7c682004eb5a"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: kumoai in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (2.12.0.dev202511061731)\n",
+      "Requirement already satisfied: pandas in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from kumoai) (2.3.3)\n",
+      "Requirement already satisfied: pyarrow<19.0.0,>=8.0.0 in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from kumoai) (18.1.0)\n",
+      "Requirement already satisfied: requests>=2.28.2 in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from kumoai) (2.32.3)\n",
+      "Requirement already satisfied: urllib3 in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from kumoai) (2.5.0)\n",
+      "Requirement already satisfied: plotly in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from kumoai) (6.4.0)\n",
+      "Requirement already satisfied: typing_extensions>=4.5.0 in c:\\program files\\positron\\resources\\app\\extensions\\positron-python\\python_files\\lib\\ipykernel\\py3 (from kumoai) (4.15.0)\n",
+      "Requirement already satisfied: kumo-api==0.45.0 in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from kumoai) (0.45.0)\n",
+      "Requirement already satisfied: tqdm>=4.66.0 in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from kumoai) (4.67.0)\n",
+      "Requirement already satisfied: aiohttp>=3.10.0 in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from kumoai) (3.12.14)\n",
+      "Requirement already satisfied: pydantic>=1.10.21 in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from kumoai) (2.12.4)\n",
+      "Requirement already satisfied: rich>=9.0.0 in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from kumoai) (14.0.0)\n",
+      "Requirement already satisfied: protobuf>=3.19.0 in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from kumo-api==0.45.0->kumoai) (6.31.1)\n",
+      "Requirement already satisfied: aiohappyeyeballs>=2.5.0 in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from aiohttp>=3.10.0->kumoai) (2.6.1)\n",
+      "Requirement already satisfied: aiosignal>=1.4.0 in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from aiohttp>=3.10.0->kumoai) (1.4.0)\n",
+      "Requirement already satisfied: attrs>=17.3.0 in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from aiohttp>=3.10.0->kumoai) (24.2.0)\n",
+      "Requirement already satisfied: frozenlist>=1.1.1 in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from aiohttp>=3.10.0->kumoai) (1.7.0)\n",
+      "Requirement already satisfied: multidict<7.0,>=4.5 in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from aiohttp>=3.10.0->kumoai) (6.6.3)\n",
+      "Requirement already satisfied: propcache>=0.2.0 in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from aiohttp>=3.10.0->kumoai) (0.3.2)\n",
+      "Requirement already satisfied: yarl<2.0,>=1.17.0 in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from aiohttp>=3.10.0->kumoai) (1.20.1)\n",
+      "Requirement already satisfied: idna>=2.0 in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from yarl<2.0,>=1.17.0->aiohttp>=3.10.0->kumoai) (3.10)\n",
+      "Requirement already satisfied: annotated-types>=0.6.0 in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from pydantic>=1.10.21->kumoai) (0.7.0)\n",
+      "Requirement already satisfied: pydantic-core==2.41.5 in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from pydantic>=1.10.21->kumoai) (2.41.5)\n",
+      "Requirement already satisfied: typing-inspection>=0.4.2 in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from pydantic>=1.10.21->kumoai) (0.4.2)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from requests>=2.28.2->kumoai) (3.4.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from requests>=2.28.2->kumoai) (2024.8.30)\n",
+      "Requirement already satisfied: markdown-it-py>=2.2.0 in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from rich>=9.0.0->kumoai) (3.0.0)\n",
+      "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in c:\\program files\\positron\\resources\\app\\extensions\\positron-python\\python_files\\lib\\ipykernel\\py3 (from rich>=9.0.0->kumoai) (2.19.2)\n",
+      "Requirement already satisfied: mdurl~=0.1 in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from markdown-it-py>=2.2.0->rich>=9.0.0->kumoai) (0.1.2)\n",
+      "Requirement already satisfied: colorama in c:\\users\\user\\appdata\\roaming\\python\\python313\\site-packages (from tqdm>=4.66.0->kumoai) (0.4.6)\n",
+      "Requirement already satisfied: numpy>=1.26.0 in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from pandas->kumoai) (2.3.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\program files\\positron\\resources\\app\\extensions\\positron-python\\python_files\\lib\\ipykernel\\py3 (from pandas->kumoai) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from pandas->kumoai) (2024.2)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from pandas->kumoai) (2024.2)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\program files\\positron\\resources\\app\\extensions\\positron-python\\python_files\\lib\\ipykernel\\py3 (from python-dateutil>=2.8.2->pandas->kumoai) (1.17.0)\n",
+      "Requirement already satisfied: narwhals>=1.15.1 in c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from plotly->kumoai) (2.10.2)\n",
+      "Requirement already satisfied: packaging in c:\\program files\\positron\\resources\\app\\extensions\\positron-python\\python_files\\lib\\ipykernel\\py3 (from plotly->kumoai) (25.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Ignoring invalid distribution ~angchain-community (C:\\Users\\user\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution ~angchain-community (C:\\Users\\user\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution ~angchain-community (C:\\Users\\user\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages)\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install kumoai --pre --upgrade"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "g7NRLAY3O4Xz"
    },
@@ -60,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -69,7 +122,23 @@
     "id": "VJIParnzO6Vu",
     "outputId": "678d4adf-03d4-43b9-d452-3dc8a7c13a7c"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Opening browser page to automatically generate an API key...\n",
+      "If the page does not open, manually create a new API key at https://kumorfm.ai/api-keys and set it using os.environ[\"KUMO_API_KEY\"] = \"YOUR_API_KEY\"\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2025-11-07 21:35:08 - kumoai:301 - INFO] Generated token \"sdk-desktop-fa1d88v-2025-11-07-21-35-00-Z\" and saved to KUMO_API_KEY env variable\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
@@ -88,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -96,7 +165,15 @@
     "id": "agHmdhx5O77n",
     "outputId": "d70f8a5a-5ede-4319-8e87-a7c570f1f47b"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2025-11-07 21:35:23 - kumoai:204 - INFO] Successfully initialized the Kumo SDK (version 2.12.0.dev202511061731) against deployment https://kumorfm.ai/api, with log level INFO.\n"
+     ]
+    }
+   ],
    "source": [
     "rfm.init()"
    ]
